--- a/About.html
+++ b/About.html
@@ -69,7 +69,7 @@ header-img: "img/post-bg-rwd.jpg"
 <!-- Gitalk 评论 start  -->
 {% if site.gitalk.enable %}
 <!-- Gitalk link  -->
-<link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
+<!-- <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
 <script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script>
 
 <div id="gitalk-container"></div>
@@ -85,7 +85,7 @@ header-img: "img/post-bg-rwd.jpg"
     });
     gitalk.render('gitalk-container');
 </script>
-{% endif %}
+{% endif %} -->
 <!-- Gitalk end -->
 
  <!-- disqus 评论框 start  -->
