--- a/Applications.html
+++ b/Applications.html
@@ -117,8 +117,8 @@ header-img: "img/app-bg2.jpg"
 
 
 <!-- Gitalk 评论 start  -->
-{% if site.gitalk.enable %}
-<!-- Gitalk link  -->
+<!-- {% if site.gitalk.enable %}
+<!-- Gitalk link  
 <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
 <script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script>
 
@@ -135,7 +135,7 @@ header-img: "img/app-bg2.jpg"
     });
     gitalk.render('gitalk-container');
 </script>
-{% endif %}
+{% endif %} -->
 <!-- Gitalk end -->
 
  <!-- disqus 评论框 start  -->
