--- a/Distribution.html
+++ b/Distribution.html
@@ -131,8 +131,8 @@ header-img: "img/post-bg-debug.png"
 
 
 <!-- Gitalk 评论 start  -->
-{% if site.gitalk.enable %}
-<!-- Gitalk link  -->
+<!-- {% if site.gitalk.enable %}
+<!-- Gitalk link  
 <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
 <script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script>
 
@@ -149,7 +149,7 @@ header-img: "img/post-bg-debug.png"
     });
     gitalk.render('gitalk-container');
 </script>
-{% endif %}
+{% endif %} -->
 <!-- Gitalk end -->
 
  <!-- disqus 评论框 start  -->
