--- a/Estuary.html
+++ b/Estuary.html
@@ -153,9 +153,9 @@ header-img: "img/post-bg-os-metro.jpg"
     }
 </script>
 
-<!-- Gitalk 评论 start  -->
+<!-- Gitalk 评论 start 
 {% if site.gitalk.enable %}
-<!-- Gitalk link  -->
+<!-- Gitalk link 
 <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
 <script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script>
 
@@ -172,7 +172,7 @@ header-img: "img/post-bg-os-metro.jpg"
     });
     gitalk.render('gitalk-container');
 </script>
-{% endif %}
+{% endif %} -->
 <!-- Gitalk end -->
 
 <!-- disqus 评论框 start  -->
