--- a/FAQ.html
+++ b/FAQ.html
@@ -67,8 +67,8 @@ header-img: "img/post-bg-coffee.jpeg"
 
 
 <!-- Gitalk 评论 start  -->
-{% if site.gitalk.enable %}
-<!-- Gitalk link  -->
+<!-- {% if site.gitalk.enable %}
+<!-- Gitalk link  -
 <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
 <script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script>
 
@@ -85,7 +85,7 @@ header-img: "img/post-bg-coffee.jpeg"
     });
     gitalk.render('gitalk-container');
 </script>
-{% endif %}
+{% endif %} -->
 <!-- Gitalk end -->
 
  <!-- disqus 评论框 start  -->
